<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/Esplora"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/esplora"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/Amici"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/amici"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/Profilo"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/profilo"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="@color/white" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/immagini">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="183dp"
                android:src="@drawable/ic_banner_foreground" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="126dp"
                android:layout_height="135dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="120dp"
                android:src="@mipmap/image_round" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="275dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">


                <Button
                    android:id="@+id/giochi"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:text="@string/giochi"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/preferiti"
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:text="@string/preferiti"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:backgroundTint="@color/white" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</ScrollView>