<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profilo.ProfiloFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewProfilo"
                android:layout_width="105dp"
                android:layout_height="86dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="65dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_cloud_download_24" />

            <TextView
                android:id="@+id/username"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewProfilo"
                android:layout_centerHorizontal="true"
                android:text="@string/username"
                android:textSize="20dp">

            </TextView>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/testo_lista_giochi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:text="@string/lista"
                    android:textSize="25dp">

                </TextView>

                <Button
                    android:id="@+id/veditutto_lista"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="160dp"
                    android:layout_marginLeft="160dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="31dp"
                    android:text="@string/vedi_tutto"
                     />


            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/testo_lista_preferiti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/lista_preferiti"
                    android:textSize="25dp">

                </TextView>

                <Button
                    android:id="@+id/veditutto_lista_preferiti"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="160dp"
                    android:layout_marginLeft="160dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="31dp"
                    android:text="@string/vedi_tutto"
                     />


            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_lista_preferiti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:id="@+id/testo_ospite_giochi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="6dp"
                android:textAlignment="center"
                android:text="@string/error_profilo"
                android:textSize="25dp"
                android:visibility="gone">

            </TextView>

        </LinearLayout>


    </LinearLayout>

</ScrollView>