<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <SearchView
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/giochi"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/giochi"
                    android:layout_marginTop="120dp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/veditutti1"
                    android:layout_width="171dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="16dp"
                    android:text="vedi tutti" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nuoviArrivi"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="@string/nuovi_arrivi"
                android:textColor="@color/black"
                android:layout_marginLeft="16dp"
                android:textSize="30sp" />

            <Button
                android:id="@+id/veditutti2"
                android:layout_width="171dp"
                android:layout_height="35dp"
                android:layout_marginRight="16dp"
                android:text="vedi tutti" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/offerte"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:text="@string/offerte"
                    android:textColor="@color/black"
                    android:layout_marginLeft="16dp"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/veditutti3"
                    android:layout_width="171dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="16dp"
                    android:text="vedi tutti" />

            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/Community"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_group_24" />

            <ImageButton
                android:id="@+id/Esplora"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_videogame_asset_24" />

            <ImageButton
                android:id="@+id/Profilo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_person_24" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>