<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EsploraFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SearchView
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/giochi"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="120dp"
                    android:background="@color/white"
                    android:text="@string/giochi"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/veditutti1"
                    android:layout_width="171dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="16dp"
                    android:text="vedi tutti" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/imageButton1"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/nuoviArrivi"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:background="@color/white"
                    android:text="@string/nuovi_arrivi"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/veditutti2"
                    android:layout_width="171dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="16dp"
                    android:text="vedi tutti" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/imageButton7"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton8"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton9"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton10"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton11"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/offerte"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:background="@color/white"
                    android:text="@string/offerte"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/veditutti3"
                    android:layout_width="171dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="16dp"
                    android:text="vedi tutti" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/imageButton12"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton13"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton14"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton15"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                    <ImageButton
                        android:id="@+id/imageButton16"
                        android:layout_width="100dp"
                        android:layout_height="94dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_gallery" />

                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>


    </RelativeLayout>



</ScrollView>